appservice.yaml
apiVersion: v1
kind: Service 
metadata:
   name: vproapp-service

spec:
   ports:
   -  port: 8080
      targetPort: vproapp-port
      protocol: TCP
   selector: 
      app: vproapp
   type: ClusterIP
