rmqservice.yaml
apiVersion: v1
kind: Service 
metadata:
   name: vpromq01

spec:
   ports:
   -  port: 5672
      targetPort: vpro-mq-port
      protocol: TCP
   selector: 
      app: vprormq
   type: ClusterIP
